--- a/klare.cabal
+++ b/klare.cabal
@@ -21,8 +21,11 @@ common common-opts
 
   default-language:   Haskell2010
   default-extensions:
+    ExplicitForAll
     ImportQualifiedPost
     LambdaCase
+    RecordWildCards
+    ScopedTypeVariables
     TypeApplications
 
 library
@@ -31,6 +34,9 @@ library
   -- cabal-fmt: expand src
   exposed-modules:
     Core
+    Klare.Data.Buffer
+    Klare.Data.Layout
+    Klare.Error.GL
     Klare.Events
     Klare.Events.Callbacks
     Klare.Events.Type
@@ -47,6 +53,7 @@ library
     , JuicyPixels-extra
     , OpenGL
     , pretty
+    , StateVar
     , stm
     , storable-tuple
 
