--- a/klare.cabal
+++ b/klare.cabal
@@ -18,6 +18,7 @@ common common-opts
   build-depends:
     , base
     , bytestring
+    , containers
 
   default-language:   Haskell2010
   default-extensions:
@@ -52,6 +53,7 @@ library
 
   hs-source-dirs:  src
   build-depends:
+    , freetype2
     , GLFW-b
     , GLUtil
     , JuicyPixels
